# desk-pilot

./: .gitignore  CLAUDE.md  Cargo.toml  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  tsconfig.build.json  tsconfig.json
.cargo/: config.toml
apps/audio-aura/: Cargo.toml  aura.json  build.rs
apps/audio-aura-devtools/: .env.example  .gitignore  Cargo.toml  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.web.json  vite.config.ts
apps/audio-aura-devtools/src/: App.css  App.tsx  apiBase.ts  main.tsx  types.ts
apps/audio-aura-devtools/src/components/: ArticlePanel.tsx  Conversation.tsx  DevInject.tsx  Header.tsx  UtteranceList.tsx
apps/audio-aura-devtools/src/hooks/: useAsrStream.ts  useEventStream.ts  useVoiceCapture.ts
apps/audio-aura/src/: main.rs
apps/geek-familiar/: Cargo.toml
apps/geek-familiar/src/: lib.rs  main.rs
apps/omni-scout/: Cargo.toml  build.rs  scout.json
apps/omni-scout/assets/: meeting_summary.m4a
apps/omni-scout/assets/mock-audio/: bugfix.m4a  chat-developer.m4a  evection.m4a  excel.m4a  family-plan.m4a  game-play.m4a  hungry_snake.m4a  meeting-email.m4a  post-design.m4a  refactor.m4a  ui-design.m4a  vedio-Introduction.m4a  vedio-cutting.m4a  voice-engine.m4a
apps/omni-scout/src/: main.rs  server.rs
apps/omni_scout/: README.md  package.json  tsconfig.json
apps/omni_scout/src/: backends.ts  main.ts
apps/omni_scout_devtools/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/omni_scout_devtools/src/: App.vue  api.ts  style.css  types.ts
apps/swift-ime/: CMakeLists.txt  Cargo.toml
apps/swift-ime/debian/: changelog  control  control.in  install  rules
apps/swift-ime/glue/: engine.cpp  engine.h
apps/swift-ime/release/fcitx/: CMakeLists.txt  engine.cpp  engine.h  fcitx5-swift-ime.addon.conf.in  swift-ime.conf
apps/swift-ime/scripts/: build_fcitx.sh
apps/swift-ime/src/: bridge.rs  ffi.rs  lib.rs  main.rs  pinyin.rs
apps/swift-ime/src/backends/: fcitx5.rs  ibus.rs  imk.rs  mod.rs  tsf.rs
apps/visual_rover_cli/: README.md  package.json  tsconfig.json
apps/visual_rover_cli/src/: cli.ts  main.ts
apps/visual_rover_web/: README.md  env.d.ts  index.html  package.json  tsconfig.json  tsconfig.web.json  vite.config.ts
apps/visual_rover_web/src/: agent.ts  routes.ts  server.ts  service.ts  store.ts
apps/visual_rover_web/web/: App.css  App.tsx
crates/: README.md
crates/aura-agent/: Cargo.toml
crates/aura-agent/src/: capability.rs  lib.rs  tool.rs
crates/aura-asr/: Cargo.toml  build.rs
crates/aura-asr/examples/: batch_transcribe.rs  qwen3_asr.rs  scout_debug.rs  streaming_asr.rs  streaming_asr_hot.rs  transcribe.rs
crates/aura-asr/src/: buffer.rs  executor.rs  lib.rs  onnx.rs  scout.rs  source.rs
crates/aura-asr/tests/: ring_vad.rs
crates/aura-core/: Cargo.toml
crates/aura-core/examples/: stage12_live.rs
crates/aura-core/src/: audio.rs  composer.rs  ingest.rs  lib.rs  main.rs  pipeline.rs  routes.rs
crates/aura-dcl/: Cargo.toml  build.rs
crates/aura-dcl/examples/: model_compare.rs  voxtral_asr.rs
crates/aura-dcl/src/: calibrator.rs  context.rs  lib.rs  prompt.rs
crates/aura-fs/: Cargo.toml  build.rs
crates/aura-fs/src/: lib.rs
crates/aura-store/: Cargo.toml
crates/aura-store/src/: archive.rs  hub.rs  lib.rs  wav.rs
crates/aura-tts/: Cargo.toml
crates/aura-tts/src/: lib.rs
crates/dp-models/: Cargo.toml
crates/dp-models/examples/: remote.rs
crates/dp-models/src/: config.rs  http.rs  lib.rs
crates/familiar-core/: Cargo.toml
crates/familiar-core/src/: behavior.rs  canvas.rs  config.rs  geometry.rs  lib.rs  scene.rs
crates/familiar-platform/: Cargo.toml
crates/familiar-platform/examples/: gen_pet_png.rs
crates/familiar-platform/src/: egui_view.rs  event.rs  gtk.rs  gtk_egui.rs  headless.rs  keep_above.rs  lib.rs  macos.rs  window.rs  windows.rs
crates/familiar-render/: Cargo.toml
crates/familiar-render/src/: lib.rs
crates/familiar-ui/: Cargo.toml  build.rs
crates/familiar-ui/src/: lib.rs
crates/ime-core/: Cargo.toml
crates/ime-core/src/: dispatcher.rs  expander.rs  lib.rs  matcher.rs  platform.rs  snippet_store.rs
crates/native/: Cargo.toml
crates/omniparser/: .gitignore  Cargo.toml  PERF.md  README.md  fetch_lib.sh  fetch_weights.sh
crates/omniparser-bind/: Cargo.toml  package.json
crates/omniparser-bind/src/: lib.rs
crates/omniparser/examples/: bench.rs  parse_one.rs
crates/omniparser/src/: caption.rs  device.rs  error.rs  lib.rs  ocr.rs  overlap.rs  som.rs  types.rs  yolo.rs
crates/scout-drivers/: Cargo.toml
crates/scout-drivers/examples/: audio_one.rs  capture_one.rs  media_play.rs  uinput_probe.rs
crates/scout-drivers/src/: audio.rs  capture.rs  control.rs  error.rs  frame.rs  input.rs  lib.rs  mock.rs
crates/scout-drivers/src/backends/: libei.rs  media.rs  mod.rs
crates/scout-drivers/src/backends/pipewire/: audio.rs  backend.rs  mod.rs  stub.rs
crates/scout-drivers/src/backends/uinput/: backend.rs  keycode.rs  mod.rs  stub.rs
crates/shared/: Cargo.toml  build.rs
crates/shared/src/: lib.rs
docs/: README.md  architecture copy.md  architecture.md  chat.txt  decisions.md  design.md  dp-models.md  draft.md  flavour.md  index copy.md  index.md  roadmap.md  runtime-selection.md  scout-server.md  som.md  stage1-2-problems.md
docs/aura/: README.md  adaptive-learning.md  architecture.md  livekit-port-notes.md  roadmap.md  stage1-2-problems.md  stage2-optimization.md
docs/familiar/: index.md
docs/ime/: design.md
docs/research/: agents.md  index.md  omniparser.md  som.md  tradition.md
docs/ui-tars/: 01-platform-operator.md  02-agent-loop-exec-goto-pause.md  03-action-vocab-thought-prompt.md  04-llm-provider-streaming-mcp.md  05-server-snapshot-context.md  06-web-ui-interrupt-viz.md  README.md
native/: .gitignore  Cargo.toml
native/src/: lib.rs
scripts/: link-cuda-runtime.sh  tmp.sh
scripts/mloader/: __init__.py  detect_env.py  download.py  pyproject.toml  serve.py
(+5 files in other folders)
