# desk-pilot native layer — a Cargo workspace living alongside the pnpm TS monorepo.
#
# The TS monorepo (`packages/*`, `apps/*`) and this Rust workspace coexist at the repo
# root without interfering: pnpm ignores `crates/`/`target/`, cargo ignores `packages/`.
#
# Layout (see crates/README.md):
#   crates/drivers   scout-drivers  capture+input traits + feature-gated backends
#                                    (pipewire / uinput / libei are modules here, not crates)
[workspace]
resolver = "2"
members = [
    # desk-pilot shared
    "crates/shared",

    # audio-aura (voice)
    "crates/aura-dcl",
    "crates/aura-store",
    "crates/aura-core",
    "crates/aura-asr",
    "crates/aura-tts",
    "crates/aura-agent",
    "apps/audio-aura",
    "native",

    # omni-scout + visual-rover (vision)
    "crates/scout-drivers",
    "crates/omniparser",
    "apps/omni-scout",

    # geek-familiar (sprite engine)
    "crates/familiar-core",
    "crates/familiar-render",
    "crates/familiar-platform",
    "crates/familiar-ui",
    "apps/geek-familiar",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"
authors = ["VRover"]
description = "desk-pilot native capture + input driver layer"
publish = false

# In-workspace path deps (consumed via `dep = { workspace = true }` in member crates).
[workspace.dependencies]
scout-drivers = { path = "crates/scout-drivers" }
# Logging: `tracing` is the facade (lib crates depend on this only); the subscriber
# implementation lives in binaries via shared::init_tracing (see crates/shared).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# familiar-* crates use short dep keys (core/render/platform/ui/fs) internally;
# the `package` field maps them to the actual crate names.
core     = { path = "crates/familiar-core", package = "familiar-core" }
render   = { path = "crates/familiar-render" }
platform = { path = "crates/familiar-platform" }
ui       = { path = "crates/familiar-ui" }
fs       = { path = "crates/shared", package = "shared" }

[profile.release]
lto = "thin"
