# Rust workspace for the audio-aura core. native/ = napi shim (dev TS path);
# crates/* = the standalone daemon spine (M-transport onward).
[workspace]
resolver = "2"
members = [
    "native",
    "crates/aura-dcl",
    "crates/aura-store",
    "crates/aura-core",
    "crates/aura-asr",
    "crates/aura-tts",
    "crates/aura-agent",
    "crates/daemon",
    "crates/aura-fs",
]

[profile.release]
opt-level = 3
