[package]
name = "aura-daemon"
version = "0.1.0"
edition = "2021"
description = "audio-aura daemon binary — composes the Pipeline (Stage1→Stage2), runs a Stage3 rule trigger for the closed-loop demo, and exposes a socket skeleton (health real, control/stream/query endpoints stubbed) for desktop-pet."

[[bin]]
name = "aura-daemon"
path = "src/main.rs"
required-features = ["asr", "cuda"]

[features]
default = []
asr = ["audio-aura-core/asr"]
cuda = ["audio-aura-core/cuda"]

[dependencies]
audio-aura-core = { path = "../../crates/aura-core" }
audio-aura-agent = { path = "../../crates/aura-agent" }
audio-aura-asr = { path = "../../crates/aura-asr" }
dp-models = { workspace = true }
audio-aura-router = { path = "../../crates/aura-dcl" }
audio-aura-store = { path = "../../crates/aura-store" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
shared = { path = "../../crates/shared", features = ["log"] }
tracing = { workspace = true }

[build-dependencies]
shared = { path = "../../crates/shared" }

# FileLoader namespaces (consumed by build.rs → shared::loader!()).
# CONF: runtime config — dev reads this crate's dir (apps/audio-aura/aura.json),
# prod reads the unified config folder ~/.desk-pilot/aura.json.
# DATA: runtime data (utterance recordings etc.) — dev writes this crate's data/,
# prod writes the unified data folder ~/.desk-pilot/data.
# (Don't write the bracketed section name in comments — the loader's naive
# scanner matches the first occurrence anywhere in the file.)
[package.metadata.shared]
CONF = { dev = ".", prod = "~/.desk-pilot" }
DATA = { dev = "data", prod = "~/.desk-pilot/data" }
