[package]
name = "omni-scout"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Visual Scout capture daemon — persistent PipeWire screen capture exposed over HTTP"

[[bin]]
name = "omni-scout"
path = "src/main.rs"

[dependencies]
scout-drivers = { path = "../../crates/scout-drivers", features = ["pipewire"] }
shared = { path = "../../crates/shared" }
libc = "0.2"

[build-dependencies]
shared = { path = "../../crates/shared" }

# Mock audio assets: --mock-audio <filename> resolves here.
# dev → this crate's assets/ dir; prod → ~/.desk-pilot/assets/
[package.metadata.shared]
ASSETS = { dev = "assets", prod = "~/.desk-pilot/assets" }
