[package]
name = "swift-ime"
version = "0.1.0"
edition = "2021"
description = "swift-ime — DeskPilot input method engine (fcitx5 addon .so + ibus DBus engine)"

[lib]
name = "swift_ime"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "swift-ime"
path = "src/main.rs"

[dependencies]
ime-core = { workspace = true }
inputx-pinyin = "1.4"
tracing = { workspace = true }
shared = { path = "../../crates/shared", features = ["log"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
