[package]
name = "audio-aura-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Thin Stage1→Stage2 bench built on the Pipeline composer.
[[example]]
name = "stage12_live"
required-features = ["asr", "cuda"]

[features]
default = []
cuda = ["audio-aura-router/cuda"]
# Stage1 local ASR (SenseVoice via audio-aura-asr/onnx).
asr = ["audio-aura-asr/onnx"]

[dependencies]
audio-aura-router = { path = "../aura-dcl" }
audio-aura-asr = { path = "../aura-asr" }
anyhow = "1"
tracing = { workspace = true }
