[package]
name = "audio-aura-router"
version = "0.1.0"
edition = "2021"
description = "Local router SLM (Qwen3-1.7B via mistral.rs): merged 口语整流 + 意图路由. Pure logic shared by the napi shim and the daemon."

[dependencies]
mistralrs = "0.8"
dp-models = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
# Stage1 data contract (Utterance). aura-dcl → aura-asr is a single direction (no cycle: aura-asr
# is a true leaf now that stage12_live moved to aura-core).
audio-aura-asr = { path = "../aura-asr" }

[build-dependencies]
shared = { path = "../shared" }

# Namespace: model files. dev = relative to this crate's dir → ../../assets/models.
[package.metadata.shared]
MODELS = { dev = "../../assets/models", prod = "~/.desk-pilot/models" }

[features]
default = []
# GPU: build with `--features cuda` + CUDA_COMPUTE_CAP=120 (Blackwell sm_120).
cuda = ["mistralrs/cuda"]
