[package]
name = "audio-aura-store"
version = "0.1.0"
edition = "2021"
description = "rusqlite storage for the voice core — same 4-table schema as the TS src/store.ts"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
