[package]
name = "dp-models"
version.workspace = true
edition.workspace = true
description = "desk-pilot 本地模型 Provider 抽象层: 统一 local(lib 嵌入)/remote(OpenAI 兼容 HTTP) 推理后端, 跨 aura / visual-rover 子系统。"

[dependencies]
reqwest = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
base64 = { workspace = true }

[[example]]
name = "remote"
