[package]
name = "shared"
version = "0.1.0"
edition = "2021"
description = "FileLoader — dev/prod asset path resolution for cargo crates. Finds files under a crate's own assets/ regardless of pwd or target/ depth."

[dependencies]
anyhow = "1"
tracing-subscriber = { workspace = true, optional = true }

[features]
# Process-wide tracing subscriber init for BINARIES (shared::init_tracing). Lib crates must
# NOT enable this — they depend on the `tracing` facade only.
log = ["dep:tracing-subscriber"]
