[project]
name = "mloader"
version = "0.1.0"
description = "desk-pilot model loader: 模型下载 / 引擎启停 / 环境探测 (跨平台 subprocess, 不 shell)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "huggingface_hub>=0.30",
    "pynvml>=12",
    "sglang>=0.5.9",
    "transformers>=4.57.1",
]

# mock 子命令用的轻量 OpenAI 兼容服务（serve.py mock），
# vllm / sglang 引擎自带 server，不需要这里的 Python 包。
[project.optional-dependencies]
server = ["fastapi", "uvicorn"]

[project.scripts]
mloader-serve    = "mloader.serve:main"
mloader-download = "mloader.download:main"
mloader-detect   = "mloader.detect_env:main"

[tool.setuptools]
packages = ["mloader"]

[tool.setuptools.package-dir]
mloader = "."

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
